--- a/dts/exynos5420-smdk5420.dts
+++ b/dts/exynos5420-smdk5420.dts
@@ -1,5 +1,5 @@
 /*
- * SAMSUNG UNIVERSAL5420 board device tree source
+ * SAMSUNG SMDK5420 board device tree source
  *
  * Copyright (c) 2013 Samsung Electronics Co., Ltd.
  *		http://www.samsung.com
@@ -13,19 +13,15 @@
 #include "exynos5420.dtsi"
 
 / {
-	model = "Samsung UNIVERSAL5420 board based on EXYNOS5420";
-	compatible = "samsung,universal5420",
-        "samsung,n1", "samsung,n1a",
-        "samsung,n1awifi", "samsung,lt03",
-        "samsung,lt03wifi", "samsung,exynos5420",
-        "samsung,exynos5";
+	model = "Samsung SMDK5420 board based on EXYNOS5420";
+	compatible = "samsung,smdk5420", "samsung,exynos5420", "samsung,exynos5";
 
 	memory {
 		reg = <0x20000000 0x80000000>;
 	};
 
 	chosen {
-		bootargs = "console=ttySAC2,115200n8";
+		bootargs = "console=ttySAC2,115200 init=/linuxrc";
 	};
 
 	fixed-rate-clocks {
