Add boot image info

--- a/exynos5420-universal5420.dts
+++ b/exynos5420-universal5420.dts
@@ -25,7 +25,7 @@
 	};
 
 	chosen {
-		bootargs = "console=ttySAC2,115200n8";
+		bootargs = "console=ttySAC2,115200n8 vmalloc=512M androidboot.console=ttySAC2";
 	};
 
 	fixed-rate-clocks {
