--- a/exynos5420-universal5420.dts
+++ b/exynos5420-universal5420.dts
@@ -259,7 +259,7 @@
 				};
 
 				max77802_ldo3_reg: LDO3 {
-					regulator-compatible = 	"vcc_1.8v_ap", "spi2.0", "wm5102-codec";
+					regulator-compatible = 	"vcc_1.8v_ap", "spi2.0", "wm5102";
 					regulator-name = "vcc_1.8v_ap";
 					regulator-min-microvolt = <1800000>;
 					regulator-max-microvolt = <1800000>;
@@ -783,7 +783,7 @@
 
 	/* The addresses below have yet to be verified/corrected. Otherwise I'm pretty sure it's quite accurate. */
 
-	i2c_max77693: i2c-gpio {
+	i2c_max77693: i2c-gpio-1 {
 		compatible = "i2c-gpio";
 		gpios = <&gpm2 0 GPIO_ACTIVE_HIGH>, <&gpm2 1 GPIO_ACTIVE_HIGH>;
 		i2c-gpio,delay-us = <2>;
@@ -791,7 +791,7 @@
 		#size-cells = <0>;
 		status = "okay";
 
-		max77693@66 {
+		max77693_charger: max77693@66 {
 			compatible = "maxim,max77693";
 			interrupt-parent = <&gpx1>;
 			interrupts = <5 2>;
@@ -806,6 +806,7 @@
 					regulator-name = "ESAFEOUT2";
 				};
 				charger_reg: CHARGER@0 {
+					regulator-compatible = "vinchg1", "charger-manager.0";
 					regulator-name = "CHARGER";
 					regulator-boot-on;
 					regulator-min-microamp = <60000>;
@@ -813,18 +814,36 @@
 				};
 			};
 
-			/* The stuff below may or may not be a stupid addition. */
-			/* Not sure if it's actually relevant. */
-
-			charger {
-				compatible = "maxim,max77693-charger";
-
-				maxim,constant-microvolt = <4350000>;
-				maxim,min-system-microvolt = <3600000>;
-				maxim,thermal-regulation-celsius = <100>;
-				maxim,battery-overcurrent-microamp = <3500000>;
-				maxim,charge-input-threshold-microvolt = <4300000>;
-			};
- 		};
+		max77693_leds: leds@??? {
+			compatible = "max77693,leds-sec1", "max77693,torch-sec1";
+		};
  	};
+
+ 	/* Just copypaste from wm5102 documentation. Added only the "*-supply" stuff. Will take a closer look at this later on. */
+ 	
+ 	codec: wm5102@1a {
+		compatible: "wlf,wm5102";
+		reg = <0x1a>;
+		interrupts = <347>;
+		interrupt-controller;
+		#interrupt-cells = <2>;
+		interrupt-parent = <&gic>
+		gpio-controller;
+		#gpio-cells = <2>;
+		wlf,gpio-defaults = <
+			0x00000000 /* AIF1TXLRCLK */
+			0xffffffff
+			0xffffffff
+			0xffffffff
+			0xffffffff
+			>;
+		AVDD-supply = <&max77802_ldo3reg>;
+		LDOVDD-supply = <&max77802_ldo3reg>;
+		DBVDD1-supply = <&max77802_ldo3reg>;
+		DBVDD2-supply = <&max77802_ldo3reg>;
+		DBVDD3-supply = <&max77802_ldo3reg>;
+		CPVDD-supply = <&max77802_ldo3reg>;
+		SPKVDDL-suppy = <&max77802_ldo3reg>;
+		SPKVDDR-supply = <&max77802_ldo3reg>;
+	};
 };
