--- a/exynos5420-universal5420.dts
+++ b/exynos5420-universal5420.dts
@@ -50,8 +50,8 @@
 		samsung,dw-mshc-ddr-timing = <0 2>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&sd0_clk &sd0_cmd &sd0_bus4 &sd0_bus8>;
-		vmmc-supply = <&max77802_ldo4_reg>;
-		vqmmc-supply = <&max77802_ldo4_reg>;
+		vmmc-supply = <&ldo4_reg>;
+		vqmmc-supply = <&ldo4_reg>;
 
 		slot@0 {
 			reg = <0>;
@@ -236,7 +236,7 @@
 			voltage-regulators {
 
 				ldo2_reg: LDO2 {
-					regulator-name ="vmem2_1.2v_ap";
+					regulator-name = "vmem2_1.2v_ap";
 					regulator-min-microvolt = <1200000>;
 					regulator-max-microvolt = <1200000>;
 					regulator-always-on;
